--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog",
   "version": "0.1.0",
-  "homepage": "https://tatianawansiedler.github.io/blog_react/",
+  "homepage": "https://tatianawansiedler.github.io/blog_react_js/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
